@@ -70,6 +70,14 @@ $t->eq_or_diff_stderr("ERROR: Can't handle ".$t->TP.'-foobar-flaaf: '.
                       "\n");
 $t->eq_or_diff_stdout('');
 
+# Unexpected file type in list file
+$t->write_configs("r x .foobar/flaaf foobar-flaaf");
+$t->call_unburden_home_dir_default;
+$t->eq_or_diff_stderr("Can't parse type 'x', must be 'd', 'D', 'f' or 'F', ".
+                      'skipping... at bin/unburden-home-dir line 661, '.
+                      '<$list_fh> line 1.'."\n");
+$t->eq_or_diff_stdout('');
+
 # lsof not found. Needs mockup of File::Which
 $t->write_configs('m f .foobar/fnord foobar-fnord');
 $t->call_unburden_home_dir_inc_path('t/lib/mockup');
