@@ -6,6 +6,7 @@ unburden-home-dir (0.3.2.5) UNRELEASED; urgency=medium
   * Don't do coverage on tests. Ignore handling of external errors.
   * Fix Moo-based Test::UBH for older versions of Moo.
   * Require at least version 1.30 of libtest-file-perl for dir_exists_ok.
+  * Remove unreachable subroutine unknown_element. Yay for coverage tests!
 
  -- Axel Beckert <abe@debian.org>  Sat, 06 Sep 2014 15:41:37 +0200
 
